fix: :bug: fix gap between main blocks and header

--- a/src/scss/components/endedProject/ended-project-path.scss
+++ b/src/scss/components/endedProject/ended-project-path.scss
@@ -2,6 +2,10 @@
   margin-top: 92px;
   padding-bottom: $lgGap;
   padding-top: 61px;
+
+  @media (max-width: 1500px) {
+    margin-top: 75px;
+  }
   @media (max-width: $fullPc) {
     margin-top: 70px;
   }
