--- a/src/scss/components/home/main.scss
+++ b/src/scss/components/home/main.scss
@@ -7,6 +7,10 @@
     margin-bottom: $lgGap;
   }
 
+  @media (max-width: 1500px) {
+    margin-top: 75px;
+  }
+
   @media (max-width: $tablet) {
     margin-top: 70px;
   }
